@@ -14,6 +14,10 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Make immunity reduce symptoms when not totally immune.
+This enables partial disease resistances.
+Nicolas Weeger 2011-07-08
+
 Display recipes a player knows that can use an item when examining it.
 Nicolas Weeger 2011-07-08
 
